--- a/assets/l10n/id.json
+++ b/assets/l10n/id.json
@@ -77,5 +77,12 @@
   "onboardingTitle2": "Anotasi & Sorotan",
   "onboardingDesc2": "Tambahkan sorotan, catatan, dan gambar ke dokumen Anda. Tandai halaman penting",
   "onboardingTitle3": "Atur Perpustakaan Anda",
-  "onboardingDesc3": "Buat koleksi untuk mengatur PDF Anda. Tandai favorit untuk akses cepat"
+  "onboardingDesc3": "Buat koleksi untuk mengatur PDF Anda. Tandai favorit untuk akses cepat",
+  "addHighlight": "Tambah Sorotan",
+  "add": "Tambah",
+  "noResultsFound": "Tidak ada hasil ditemukan",
+  "lockZoom": "Kunci Zoom",
+  "clearDrawings": "Hapus Gambar",
+  "clearDrawingsConfirm": "Apakah Anda yakin ingin menghapus semua gambar di halaman ini?",
+  "strokeWidth": "Ketebalan Garis"
 }
